feat: inimigo criado estaticamente

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <a-scene>
-        
+        <a-camera position="0 1.5 5"></a-camera>
+        <a-box color="black"></a-box>
     </a-scene>
 </body>
 </html>
