feat: trajeto do projetil

--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 </head>
 <body>
     <a-scene>
-        <a-camera position="0 1.5 5"></a-camera>
+        <a-camera shooting position="0 1.5 5"></a-camera>
         <a-box color="black"></a-box>
-        <a-sphere shooting scale=".2 .2 .2" color="black" position="0 1 0"></a-sphere>
     </a-scene>
 </body>
 </html>
