--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
     <!-- A-FRAME -->
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
 
+    <!-- PHYSICS -->
+    <script src="https://cdn.jsdelivr.net/gh/MozillaReality/ammo.js@8bbc0ea/builds/ammo.wasm.js"></script>
+    <script src="aframe-physics-system.min.js"></script>
+
     <!-- MEU SCRIPTS -->
     <script src="aframe-shooting.js"></script>
 </head>
 <body>
-    <a-scene>
+    <a-scene physics="debug: true;">
         <a-camera shooting position="0 1.5 5"></a-camera>
-        <a-box color="black"></a-box>
+        <a-box class="collidable" color="black"></a-box>
     </a-scene>
 </body>
 </html>
