--- a/index.html
+++ b/index.html
@@ -5,19 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- A-FRAME -->
-    <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
 
     <!-- PHYSICS -->
-    <script src="https://cdn.jsdelivr.net/gh/MozillaReality/ammo.js@8bbc0ea/builds/ammo.wasm.js"></script>
+    <script src="https://mixedreality.mozilla.org/ammo.js/builds/ammo.wasm.js"></script>
     <script src="aframe-physics-system.min.js"></script>
 
+    <!-- RANDOMIZER -->
+    <script src="https://unpkg.com/aframe-randomizer-components@3.0.2/dist/aframe-randomizer-components.min.js"></script>
+
     <!-- MEU SCRIPTS -->
+    <script src="aframe-enemy.js"></script>
     <script src="aframe-shooting.js"></script>
 </head>
 <body>
-    <a-scene physics="debug: true;">
+    <a-scene physics>
         <a-camera shooting position="0 1.5 5"></a-camera>
-        <a-box class="collidable" color="black"></a-box>
+        <a-entity enemy></a-entity>
+        <a-entity enemy></a-entity>
+        <a-entity enemy></a-entity>
     </a-scene>
 </body>
 </html>
+
