feat: componente enemy atualizado para criar os inimigos dinamicamente

--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
 <body>
     <a-scene physics>
         <a-camera shooting position="0 1.5 5"></a-camera>
-        <a-entity enemy></a-entity>
-        <a-entity enemy></a-entity>
-        <a-entity enemy></a-entity>
+        <a-entity enemy="amount: 5"></a-entity>
     </a-scene>
 </body>
 </html>
