feat: movimentacao dos inimigos

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 </head>
 <body>
     <a-scene physics>
-        <a-camera shooting position="0 1.5 5"></a-camera>
+        <a-camera shooting position="0 1.5 5">
+            <a-cursor></a-cursor>
+        </a-camera>
         <a-entity enemy="amount: 5"></a-entity>
     </a-scene>
 </body>
 </html>
-
