--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <!-- MEU SCRIPTS -->
     <script src="aframe-enemy.js"></script>
     <script src="aframe-shooting.js"></script>
+    <script src="aframe-scoreboard.js"></script>
 </head>
 <body>
     <a-scene physics>
         <a-camera shooting="score: #textscore" position="0 1.5 5">
             <a-cursor></a-cursor>
-            <a-text id="textscore" value="0 / 3" widht="8" color="white" align="center" position="0 2.05 -2.9"></a-text>
-            <a-plane color="black" width="1.3" height=".5" position="0 2.1 -3"></a-plane>
+            <a-entity score-board></a-entity>
         </a-camera>
         <a-entity enemy="amount: 3"></a-entity>
     </a-scene>
