feat: entidade scoreboard

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <a-scene physics>
         <a-camera shooting="score: #textscore" position="0 1.5 5">
             <a-cursor></a-cursor>
-            <a-entity score-board></a-entity>
+            <a-score-board></a-score-board>
         </a-camera>
         <a-entity enemy="amount: 3"></a-entity>
     </a-scene>
