feat: avanca de nivel

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <a-scene physics game>
         <a-camera shooting="score: #textscore" position="0 1.5 5">
             <a-cursor></a-cursor>
-            <a-score-board></a-score-board>
+            <a-score-board id="scoreboard"></a-score-board>
         </a-camera>
         <a-entity id="enemy" enemy="amount: 3"></a-entity>
     </a-scene>
