--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <!-- A-FRAME -->
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
 
+    <!-- ENVIRONMENT -->
+    <script src="https://unpkg.com/aframe-environment-component@1.3.3/dist/aframe-environment-component.min.js"></script>
+        
     <!-- PHYSICS -->
     <script src="https://mixedreality.mozilla.org/ammo.js/builds/ammo.wasm.js"></script>
     <script src="aframe-physics-system.min.js"></script>
@@ -41,6 +44,7 @@
             <a-score-board id="scoreboard"></a-score-board>
         </a-camera>
         <a-entity id="enemy" enemy="amount: 3"></a-entity>
+        <a-entity id="environment" environment></a-entity>
     </a-scene>
 </body>
 </html>
