feat: organizacao dos arquivos

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         
     <!-- PHYSICS -->
     <script src="https://mixedreality.mozilla.org/ammo.js/builds/ammo.wasm.js"></script>
-    <script src="aframe-physics-system.min.js"></script>
+    <script src="scripts/aframe-physics-system.min.js"></script>
 
     <!-- RANDOMIZER -->
     <script src="https://unpkg.com/aframe-randomizer-components@3.0.2/dist/aframe-randomizer-components.min.js"></script>
 
     <!-- MEU SCRIPTS -->
-    <script src="aframe-game.js"></script>
-    <script src="aframe-enemy.js"></script>
-    <script src="aframe-shooting.js"></script>
-    <script src="aframe-scoreboard.js"></script>
+    <script src="scripts/aframe-game.js"></script>
+    <script src="scripts/aframe-enemy.js"></script>
+    <script src="scripts/aframe-shooting.js"></script>
+    <script src="scripts/aframe-scoreboard.js"></script>
 
     <!-- confetti -->
     <script src="https://cdn.jsdelivr.net/npm/@tsparticles/confetti@3.0.3/tsparticles.confetti.bundle.min.js"></script>
@@ -67,4 +67,4 @@
     </a-scene>
 </body>
 </html>
-<script src="script.js"></script>
+<script src="scripts/script.js"></script>
